# data_reduction

./: CMakeLists.txt  GLWidget.cpp  GLWidget.h  LICENSE.txt  config.txt  dr.pro  dr_data.h  dr_functions.cpp  file_list.cpp  file_list.h  main_functions.cpp  qt_test_QImage.cpp  video_analysis.cpp
